<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="signInViewModel"
            type="com.cyberkyubi.nuntium.presentation.auth.sign.signin.viewmodel.SignInViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.auth.sign.signin.SignInFragment">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_horizontal_standard"
            android:layout_marginTop="@dimen/layout_margin_top_header"
            android:text="@string/sign_in_page_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_horizontal_standard"
            android:layout_marginTop="@dimen/layout_margin_vertical_standard"
            android:layout_marginEnd="@dimen/layout_margin_horizontal_standard"
            android:text="@string/sign_in_page_subheading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signInInputLayoutEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_horizontal_standard"
            android:layout_marginTop="@dimen/layout_margin_top_from_subheading"
            android:layout_marginEnd="@dimen/layout_margin_horizontal_standard"
            android:hint="@string/placeholder_email_address"
            app:boxBackgroundMode="filled"
            app:helperTextEnabled="false"
            app:hintAnimationEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:startIconTint="@null">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signInEditTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signInInputLayoutPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_horizontal_standard"
            android:layout_marginTop="@dimen/layout_margin_vertical_standard"
            android:layout_marginEnd="@dimen/layout_margin_horizontal_standard"
            android:hint="@string/placeholder_password"
            app:boxBackgroundMode="filled"
            app:helperTextEnabled="false"
            app:hintAnimationEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signInInputLayoutEmail"
            app:startIconTint="@null">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signInEditTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/actionTextForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_top_extended"
            android:layout_marginEnd="@dimen/layout_margin_horizontal_standard"
            android:text="@string/action_forgot_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signInInputLayoutPassword" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signInButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_horizontal_standard"
            android:layout_marginTop="@dimen/layout_margin_top_extended"
            android:layout_marginEnd="@dimen/layout_margin_horizontal_standard"
            android:text="@string/button_sign_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/actionTextForgotPassword"
            android:onClick="@{() -> signInViewModel.signInButtonClick() }"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_top_sign_in_or"
            android:text="@string/or"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signInButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signInWithGoogleButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_horizontal_standard"
            android:layout_marginTop="@dimen/layout_margin_top_sign_in_or"
            android:layout_marginEnd="@dimen/layout_margin_horizontal_standard"
            android:text="@string/button_sign_in_with_google"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signInWithFacebookButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_horizontal_standard"
            android:layout_marginTop="@dimen/layout_margin_vertical_standard"
            android:layout_marginEnd="@dimen/layout_margin_horizontal_standard"
            android:text="@string/button_sign_in_with_facebook"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signInWithGoogleButton" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_top_action_auth"
            android:layout_marginBottom="@dimen/layout_margin_bottom_action_auth"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signInWithFacebookButton"
            app:layout_constraintVertical_bias="1.0">

            <TextView
                android:id="@+id/textView98"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:text="@string/prompt_no_account"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/actionTextSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_margin_start_action_auth"
                android:text="@string/action_sign_up"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView98"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>