<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="signUpViewModel"
            type="com.cyberkyubi.nuntium.presentation.auth.sign.signup.viewmodel.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.auth.sign.signup.SignUpFragment">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_horizontal_standard"
            android:layout_marginTop="@dimen/layout_margin_top_header"
            android:text="@string/sign_up_page_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_horizontal_standard"
            android:layout_marginTop="@dimen/layout_margin_vertical_standard"
            android:layout_marginEnd="@dimen/layout_margin_horizontal_standard"
            android:text="@string/sign_up_page_subheading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/singUpInputLayoutUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_horizontal_standard"
            android:layout_marginTop="@dimen/layout_margin_top_from_subheading"
            android:layout_marginEnd="@dimen/layout_margin_horizontal_standard"
            android:hint="@string/placeholder_username"
            app:boxBackgroundMode="filled"
            app:helperTextEnabled="false"
            app:hintAnimationEnabled="false"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            app:startIconTint="@null">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUpEditTextUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={ signUpViewModel.inputUsername }"
                app:onFocusLost="@{ signUpViewModel.onFocusLost }"
                app:validateType="@{`username`}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/singUpInputLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_horizontal_standard"
            android:layout_marginTop="@dimen/layout_margin_vertical_standard"
            android:layout_marginEnd="@dimen/layout_margin_horizontal_standard"
            android:hint="@string/placeholder_email_address"
            app:boxBackgroundMode="filled"
            app:helperTextEnabled="false"
            app:hintAnimationEnabled="false"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/singUpInputLayoutUsername"
            app:startIconTint="@null">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUpEditTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:text="@={ signUpViewModel.inputEmail }"
                app:onFocusLost="@{ signUpViewModel.onFocusLost }"
                app:validateType="@{`email`}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/singUpInputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_horizontal_standard"
            android:layout_marginTop="@dimen/layout_margin_vertical_standard"
            android:layout_marginEnd="@dimen/layout_margin_horizontal_standard"
            android:hint="@string/placeholder_password"
            app:boxBackgroundMode="filled"
            app:helperTextEnabled="false"
            app:hintAnimationEnabled="false"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/singUpInputLayoutEmail"
            app:startIconTint="@null">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUpEditTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@={ signUpViewModel.inputPassword }"
                app:onFocusLost="@{ signUpViewModel.onFocusLost }"
                app:validateType="@{`password`}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/singUpInputLayoutRepeatPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_horizontal_standard"
            android:layout_marginTop="@dimen/layout_margin_vertical_standard"
            android:layout_marginEnd="@dimen/layout_margin_horizontal_standard"
            android:hint="@string/hint_repeat_password"
            app:boxBackgroundMode="filled"
            app:helperTextEnabled="false"
            app:hintAnimationEnabled="false"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/singUpInputLayoutPassword"
            app:startIconTint="@null">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUpEditTextRepeatPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@={ signUpViewModel.inputRepeatPassword }"
                app:onFocusLost="@{ signUpViewModel.onFocusLost }"
                app:validateType="@{`repeatPassword`}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUpButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_horizontal_standard"
            android:layout_marginTop="@dimen/layout_margin_vertical_standard"
            android:layout_marginEnd="@dimen/layout_margin_horizontal_standard"
            android:text="@string/button_sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/singUpInputLayoutRepeatPassword"
            android:onClick="@{() -> signUpViewModel.signUpButton() }"/>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_top_action_auth"
            android:layout_marginBottom="@dimen/layout_margin_bottom_action_auth"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpButton"
            app:layout_constraintVertical_bias="1.0">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:text="@string/prompt_already_have_account"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/actionTextSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_margin_start_action_auth"
                android:text="@string/action_sign_in"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>