<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.home.categories.ArticleCategoriesFragment">

    <TextView
        android:id="@+id/textView13"
        style="@style/FragmentTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin_horizontal_standard"
        android:layout_marginTop="@dimen/layout_margin_top_header"
        android:text="@string/categories_page_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView14"
        style="@style/FragmentSubheading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin_horizontal_standard"
        android:layout_marginTop="@dimen/layout_margin_vertical_standard"
        android:layout_marginEnd="@dimen/layout_margin_horizontal_standard"
        android:text="@string/categories_subheading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_article_categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin_horizontal_standard"
        android:layout_marginTop="@dimen/layout_margin_top_from_subheading"
        android:layout_marginEnd="@dimen/layout_margin_horizontal_standard"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        tools:listitem="@layout/item_article_categories" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_confirm"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin_horizontal_standard"
        android:layout_marginTop="@dimen/layout_margin_vertical_standard"
        android:layout_marginEnd="@dimen/layout_margin_horizontal_standard"
        android:text="@string/button_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler_article_categories" />
</androidx.constraintlayout.widget.ConstraintLayout>